@@ -5,4 +5,9 @@ MEMORY_LIMIT="512M"
 UPLOAD_MAX="512M"
 POST_MAX="512M"
 
-/usr/local/bin/php-cgi -d session.name="$SESSION_NAME" -d memory_limit="$MEMORY_LIMIT" -d upload_max_filesize="$UPLOAD_MAX" -d post_max_size="$POST_MAX" "$@"
+UPLOADDIR="`cat /var/etc/websrv-uploaddir.conf`"
+if [ -z "$UPLOADDIR" ]; then
+	UPLOADDIR="/var/tmp/ftmp"
+fi
+
+/usr/local/bin/php-cgi -d session.name="$SESSION_NAME" -d memory_limit="$MEMORY_LIMIT" -d upload_max_filesize="$UPLOAD_MAX" -d post_max_size="$POST_MAX" -d upload_tmp_dir="$UPLOADDIR" "$@"
