@@ -29,6 +29,7 @@ Changes:
 - Add ability to configure multiple iSCSI LUNs. (disk type only)
 - Add ability to edit power mode and CPU frequency.
 - Add ability to edit write cache mode on iSCSI target.
+- Add ability to edit upload directory of webserver.
 - Update mount points after importing disks. (GPT UFS/MBR UFS/GPT NTFS only)
 - Add ZFS sparse volume support.
 - Add GPT UUID to mount point.
